feat: Implement Classification component and update routing

--- a/src/app/Splash/Splash.html
+++ b/src/app/Splash/Splash.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-400 flex items-center justify-center min-h-screen">
+<div class="card bg-gray-400 flex items-center justify-center min-h-screen">
   <!-- Outer window -->
   <div class="w-5/6 h-[90vh] bg-[#008000] text-white shadow-2xl shadow-white border rounded border-black">
     <!-- Title bar -->
