--- a/src/app/draft.component/draft.component.html
+++ b/src/app/draft.component/draft.component.html
@@ -48,8 +48,13 @@
   </div>
 
   <!-- Bottom note -->
-  <div class="mt-4 text-center text-[11px] text-[#ffffaa]">
-    Prima OK para começar a época.
+  <div class="mt-6 flex justify-center">
+    <button type="button"
+          class="w-32 btn btn-accent" (click)="goToClassification()"
+        >
+            <lucide-angular [img]="CheckIcon" class="my-icon"></lucide-angular>
+          <span>OK</span>
+        </button>
   </div>
 </div>
 </div>
