--- a/src/app/classification.component/classification.component.html
+++ b/src/app/classification.component/classification.component.html
@@ -2,7 +2,7 @@
 <div class="w-5/6 h-[90vh] bg-[#008000] text-white border border-black rounded shadow-2xl shadow-white">
 
     <div class="flex items-center justify-between bg-[#0055aa] px-3 py-1 text-xs text-white">
-      <span>Classificação</span>
+      <span>Classificação 2 rodada</span>
      
     </div>
   <div class="grid grid-cols-2 gap-4 mt-6 px-4">
